--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,9 @@
 eclipse.preferences.version=1
-encoding//Processings/Ex_processing3.py=UTF-8
+encoding//Processings/Add_types.py=utf-8
+encoding//Processings/Ex_processing1.py=utf-8
+encoding//Processings/Ex_processing2.py=utf-8
+encoding//Processings/Ex_processing3.py=utf-8
+encoding//Processings/Ex_processing4.py=utf-8
+encoding//Processings/Ex_processing5.py=utf-8
+encoding//Processings/Ex_processing6.py=utf-8
 encoding/<project>=UTF-8
